@@ -1,3 +1,8 @@
+2017-04-26 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.m
+	Set SoapHander on login, not on opening of the Object Inspector.
+
 2017-02-21 Riccardo Mottola <rm@gnu.org>
 
 	* DBObjectInspector.m
